# boids

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: bird.cpp  flock.cpp  slider.cpp  tunableparams.cpp  ui.cpp
src/include/: bird.h  constants.h  flock.h  slider.h  tunableparams.h  ui.h
